Refactored test and pom.xml